fix doswiadczenie overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -586,7 +586,7 @@ section.hero {
 
 section.about {
     padding-top: 100px;
-
+    overflow: hidden;
 
 
     .block {
